adding font_face

--- a/blog.html
+++ b/blog.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Blog donde podrás ver todas las novedades de las que disponemos y de muchas más noticias interesantes sobre este sector, para que puedas estar al día sobre todos los cambios en construcción.">
-    <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" media="print" href="assets/css/especialStyle.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
-    <title>Blog</title>
+    <title>Alex Construction | Blog</title>
 </head>
 
-<body>
+<body class="body__blog">
     <header class="header__blog">
         <div class="height__fijo"></div>
         <nav class="navegacion">
@@ -126,7 +126,8 @@
             </article>
             <article>
                 <h2>Overflow Scroll</h2>
-                <p class="scroll">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero rerum atque provident exercitationem,
+                <p class="scroll">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero rerum atque provident
+                    exercitationem,
                     amet facilis error enim pariatur quasi aperiam. Facilis eveniet eos accusantium nulla ratione, est
                     sed ad libero?
                     Iste consequuntur, quo labore quos aliquid eum reiciendis nisi ab eaque odio esse autem ex saepe
@@ -151,8 +152,10 @@
         </section>
         <a class="redirecciones__enlaces" href="#tabla">Primer Articulo</a>
     </main>
-    <a href="https://wa.me/34634420269" target="_blank">
-        <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
+    <!-- No he consegido que funcione, no se ve pero si esta el enlace -->
+    <!-- <a class="fab fa-whatsapp whatsapp___fixed" href="https://wa.me/34634420269" target="_blank"> -->
+    <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
+
     </a>
     <footer class="contenedor__centrado">
         <div class="footer__contenido">
