--- a/contacto.html
+++ b/contacto.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Esta es la página de contacto de la web Alex Construction, en el caso de que necesite ayuda y tenga alguna duda relevante con cualquiera de nuestros servicios, contáctenos.">
-    <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Contacto</title>
+    <title>Alex Construction | Contacto</title>
 </head>
 
 <body>
