--- a/proyectos.html
+++ b/proyectos.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aquí se pueden ver algunas de las fotos que les hemos hecho algunos de nuestros proyectos, también podrás ver una pequeña descripción del trabajo realizado en la obra.">
-    <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Le he cambiado el nombre porque cuadra mejor con mi proyecto -->
-    <title>Proyectos</title> 
+    <title>Alex Construction | Proyectos</title> 
 </head>
 
 <body>
