--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Página principal de la web Alex Construction sobre construcción y montajes de pladur. En esta página encontrarás información sobre lo que hacemos y como contactar con nosotros.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Inicio</title>
+    <title>Alex Construction | Inicio</title>
 </head>
 
 <body>
