todo lo pedido terminado

--- a/blog.html
+++ b/blog.html
@@ -152,10 +152,10 @@
         </section>
         <a class="redirecciones__enlaces" href="#tabla">Primer Articulo</a>
     </main>
-    <!-- No he consegido que funcione, no se ve pero si esta el enlace -->
-    <!-- <a class="fab fa-whatsapp whatsapp___fixed" href="https://wa.me/34634420269" target="_blank"> -->
-    <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
-
+    <!-- No he consegido que funcione -->
+    <!-- <a id="btn__fijo" href="https://wa.me/34123456789" target="_blank"><i class="fab fa-whatsapp"></a> -->
+    <a href="https://wa.me/34123456789" target="_blank">
+        <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
     </a>
     <footer class="contenedor__centrado">
         <div class="footer__contenido">
@@ -170,7 +170,7 @@
                     <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
                 <a href="https://es.linkedin.com/" target="_blank">
                     <img class="redes-logo" src="assets/img/linkedin.png" alt="logo-linkedin"></a>
-                <a href="https://wa.me/34634420269" target="_blank">
+                <a href="https://wa.me/34123456789" target="_blank">
                     <img class="redes-logo" src="assets/img/whatsapp.png" alt="logo-whatsapp"></a>
             </div>
         </div>
