--- a/index.html
+++ b/index.html
@@ -28,96 +28,47 @@
         </nav>
 
         <div class="header__texto__inicio">
-                <h2>Bienvenido a Alex Construction</h2>
+            <h2>Bienvenido a Alex Construction</h2>
         </div>
     </header>
     <main class="contenedor__centrado contenedor__sombras">
         <h2 class="servicios__titulo">Mis Servicios</h2>
-        <section>
-            <h3>Servicio 1</h3>
-            <div>
-                <!--Imagen de Icono-->
-            </div>
-            <p>
-                Pellentesque hendrerit urna eget leo
-                tempus efficitur. Maecenas fringilla est eget
-                mi ultricies, quis laoreet leo eleifend. Cras
-                accumsan feugiat sapien eget finibus.
-            </p>
-        </section>
-        <section>
-            <h3>Servicio 2</h3>
-            <div>
-                <!--Imagen de Icono-->
-            </div>
-            <p>
-                Pellentesque hendrerit urna eget leo
-                tempus efficitur. Maecenas fringilla est eget
-                mi ultricies, quis laoreet leo eleifend. Cras
-                accumsan feugiat sapien eget finibus.
-            </p>
-        </section>
-        <section>
-            <h3>Servicio 3</h3>
-            <div>
-                <!--Imagen de Icono-->
-            </div>
-            <p>
-                Pellentesque hendrerit urna eget leo
-                tempus efficitur. Maecenas fringilla est eget
-                mi ultricies, quis laoreet leo eleifend. Cras
-                accumsan feugiat sapien eget finibus.
-            </p>
-        </section>
-        <section>
-            <h3>Servicio 3</h3>
-            <div>
-                <!--Imagen de Icono-->
-            </div>
-            <p>
-                Pellentesque hendrerit urna eget leo
-                tempus efficitur. Maecenas fringilla est eget
-                mi ultricies, quis laoreet leo eleifend. Cras
-                accumsan feugiat sapien eget finibus.
-            </p>
-        </section>
-        <section>
-            <h3>Servicio 3</h3>
-            <div>
-                <!--Imagen de Icono-->
-            </div>
-            <p>
-                Pellentesque hendrerit urna eget leo
-                tempus efficitur. Maecenas fringilla est eget
-                mi ultricies, quis laoreet leo eleifend. Cras
-                accumsan feugiat sapien eget finibus.
-            </p>
-        </section>
-        <section>
-            <h3>Servicio 3</h3>
-            <div>
-                <!--Imagen de Icono-->
-            </div>
-            <p>
-                Pellentesque hendrerit urna eget leo
-                tempus efficitur. Maecenas fringilla est eget
-                mi ultricies, quis laoreet leo eleifend. Cras
-                accumsan feugiat sapien eget finibus.
-            </p>
-        </section>
-        <section>
-            <h3>Servicio 3</h3>
-            <div>
-                <!--Imagen de Icono-->
-            </div>
-            <p>
-                Pellentesque hendrerit urna eget leo
-                tempus efficitur. Maecenas fringilla est eget
-                mi ultricies, quis laoreet leo eleifend. Cras
-                accumsan feugiat sapien eget finibus.
-            </p>
-        </section>
+        <div class="servicios">
+            <section>
+                <img src="assets/img/service5.png" alt="">
+                <p>Pellentesque hendrerit urna eget leo
+                    tempus efficitur. Maecenas fringilla est eget
+                    mi ultricies, quis laoreet leo eleifend. Cras
+                    accumsan feugiat sapien eget hendrerit urna eget leo finibus.</p>
+            </section>
+            <section>
+                <img src="assets/img/service4.png" alt="">
+                <p>Pellentesque hendrerit urna eget leo
+                    tempus efficitur. Maecenas fringilla est eget
+                    mi ultricies, quis laoreet leo eleifend. Cras
+                    accumsan feugiat sapien eget hendrerit urna eget leo finibus.</p>
+            </section>
+            <section>
+                <img src="assets/img/service3.png" alt="">
+                <p>Pellentesque hendrerit urna eget leo
+                    tempus efficitur. Maecenas fringilla est eget
+                    mi ultricies, quis laoreet leo eleifend. Cras
+                    accumsan feugiat sapien eget hendrerit urna eget leo finibus.</p>
+            </section>
+        </div>
     </main>
+    <div class="contenedor__centrado inicio__img_fija">
+        <div>
+            <h2>Sobre Nosotros</h2>
+            <p>Pellentesque hendrerit urna eget leo
+                tempus efficitur. Maecenas fringilla est eget
+                mi ultricies, quis laoreet leo eleifend. Cras
+                accumsan feugiat sapien eget finibus.</p>
+        </div>
+        <div>
+            <img src="#" alt="">
+        </div>
+    </div>
     <footer class="contenedor__centrado">
         <div class="footer__contenido">
             <div class="footer__enlaces">
