--- a/proyectos.html
+++ b/proyectos.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header__inicio">
+    <header class="header__proyecto">
         <div class="height__fijo"></div>
         <nav class="navegacion">
             <a class="logo" href="index.html">
@@ -26,15 +26,14 @@
                 <a class="navegacion__enlace" href="blog.html">Blog</a>
             </div>
         </nav>
-        
-        <div class="header__texto__inicio">
-            <h2>Bienvenido a Alex Constrution</h2>
-            <p>Lorem ipsum dolor sit amet</p>
+
+        <div class="header__texto__proyecto">
+            <h2>Proyectos</h2>
         </div>
     </header>
     
-    <main>
-        <table class="contenedor__centrado table">
+    <main class="contenedor__centrado contenedor__sombras">
+        <table class="table">
             <thead>
                 <caption>Tabla</caption>
                 <th>Lorem</th>
