menú hamburgesa hecho

--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,12 @@
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
             </a>
+            <input type="checkbox" id="check"/>
+            <label for="check" class="icon__hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
             <div class="navegacion__enlaces">
                 <a class="navegacion__enlace" href="index.html">Inicio</a>
                 <a class="navegacion__enlace" href="proyectos.html">Proyectos</a>
