song and video adding

--- a/blog.html
+++ b/blog.html
@@ -155,6 +155,22 @@
                     tempora accusamus ipsum molestiae facilis minus expedita quis, animi tempore debitis, eaque non?
                     Odio provident tenetur aliquid obcaecati?</p>
             </article>
+            <article>
+                <h2>Video en MP4 || OGG || WEBM</h2>
+                <video id="medioVideo" width="100%" height="350" controls>
+                    <source src="/assets/video/boat.mp4" type="video/mp4">
+                    <source src="/assets/video/boat.ogg" type="video/ogg">
+                    <source src="/assets/video/boat.webm" type="video/webm">
+                    Tu navegador no soporta vídeo
+               </video>
+            </article>
+            <article>
+                <h2>Sonido en MP3 || OGG</h2>
+                <audio id="medioAudio" controls>
+                    <source src="/assets/song/nature.mp3" type='audio/mpeg; codecs="mp3"'>
+                    <source src="/assets/song/nature.ogg" type='audio/ogg; codecs="vorbis"' >
+               </audio>
+            </article>
         </section>
         <a class="redirecciones__enlaces" href="#tabla">Primer Articulo</a>
     </main>
