--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
             </a>
-            <input type="checkbox" id="check"/>
+            <input type="checkbox" id="check" />
             <label for="check" class="icon__hamburger">
                 <span></span>
                 <span></span>
@@ -162,20 +162,38 @@
                     <source src="/assets/video/boat.ogg" type="video/ogg">
                     <source src="/assets/video/boat.webm" type="video/webm">
                     Tu navegador no soporta vídeo
-               </video>
+                </video>
             </article>
             <article>
                 <h2>Sonido en MP3 || OGG</h2>
                 <audio id="medioAudio" controls>
                     <source src="/assets/song/nature.mp3" type='audio/mpeg; codecs="mp3"'>
-                    <source src="/assets/song/nature.ogg" type='audio/ogg; codecs="vorbis"' >
-               </audio>
+                    <source src="/assets/song/nature.ogg" type='audio/ogg; codecs="vorbis"'>
+                </audio>
+            </article>
+            <article>
+                <h2>Video con Controles Propios :)</h2>
+                <video id="medio" width="100%" height="400">
+                    <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                    <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                </video>
+
+                <div class="contenedorVideo">
+                    <nav class="navVideo">
+                        <input type="button" id="reiniciar" value="reiniciar">
+                        <input type="button" id="retrasar" value="&laquo;">
+                        <input type="button" id="play" value="&#9658;">
+                        <input type="button" id="adelantar" value="&raquo;">
+                        <input type="button" id="silenciar" value="silenciar">
+                        <label>Volumen</label>
+                        <input type="button" id="menosVolumen" value="-">
+                        <input type="button" id="masVolumen" value="+">
+                    </nav>
+                </div>
             </article>
         </section>
         <a class="redirecciones__enlaces" href="#tabla">Primer Articulo</a>
     </main>
-    <!-- No he consegido que funcione -->
-    <!-- <a id="btn__fijo" href="https://wa.me/34123456789" target="_blank"><i class="fab fa-whatsapp"></a> -->
     <a href="https://wa.me/34123456789" target="_blank">
         <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
     </a>
@@ -200,6 +218,9 @@
             <p>Derechos reservados al diseñador y desarrollador.</p>
         </div>
     </footer>
+
+    <!-- Scripts -->
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
