--- a/blog.html
+++ b/blog.html
@@ -230,6 +230,10 @@
             <div class="footer__enlaces">
                 <a href="#">Mapa del sitio</a>
                 <a href="blog.html">Blog</a>
+                <a href="http://www.w3.org/WAI/WCAG1A-Conformance" title="Explicación del Nivel A de Conformidad">
+                    <img height="32" width="88" src="http://www.w3.org/WAI/wcag1A" alt="Icono de conformidad con el Nivel A, 
+                    de las Directrices de Accesibilidad para 
+                    el Contenido Web 1.0 del W3C-WAI"></a>
             </div>
             <div class="footer__redes">
                 <a href="https://es-es.facebook.com/" target="_blank">
