--- a/proyectos.html
+++ b/proyectos.html
@@ -39,7 +39,8 @@
     </header>
     
     <main class="contenedor__centrado contenedor__sombras">
-        <table class="table">
+        <table class="table" 
+            summary="La table contiene Lorem ipsum dolor.">
             <thead>
                 <caption>Tabla</caption>
                 <th>Lorem</th>
