no funciona bien el css

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" media="print" href="assets/css/especialStyle.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/509deda241.js" crossorigin="anonymous"></script>
     <title>Alex Construction | Blog</title>
 </head>
 
@@ -41,11 +42,11 @@
 
     <main class="contenedor__centrado contenedor__sombras">
         <div class="redirecciones__enlaces">
-            <a href="#tabla">Tabla</a>
-            <a href="#mapa">Mapa</a>
-            <a href="#youtube">YouTube</a>
-            <a href="#codepen">CodePen</a>
-            <a href="#gradiente">Gradiente</a>
+            <a id="btn1" href="#tabla">Tabla</a>
+            <a id="btn2" href="#mapa">Mapa</a>
+            <a id="btn3" href="#youtube">YouTube</a>
+            <a id="btn4" href="#codepen">CodePen</a>
+            <a id="btn5" href="#gradiente">Gradiente</a>
         </div>
         <section>
             <article>
@@ -225,6 +226,7 @@
     <a href="https://wa.me/34123456789" target="_blank">
         <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
     </a>
+    <a href="#"><i class="fas fa-arrow-up flechaArriba"></i></a>
     <footer class="contenedor__centrado">
         <div class="footer__contenido">
             <div class="footer__enlaces">
@@ -254,6 +256,7 @@
     <!-- Scripts -->
     <script src="./assets/js/video.js"></script>
     <script src="./assets/js/audio.js"></script>
+    <script src="./assets/js/jQuery.js"></script>
 </body>
 
 </html>
