actvidades tema 8 finished

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" media="print" href="assets/css/especialStyle.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/509deda241.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Alex Construction | Blog</title>
 </head>
 
@@ -50,7 +51,7 @@
         </div>
         <section>
             <article>
-                <a name="tabla"></a>
+                <a name="tabla" class="tabla"></a>
                 <h2>Tabla</h2>
                 <table class="contenedor__centrado table">
                     <thead>
@@ -89,19 +90,19 @@
                 </table>
             </article>
             <article>
-                <a name="mapa"></a>
+                <a name="mapa" class="mapa"></a>
                 <h2>Mapa</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.710640813319!2d-3.686688184621157!3d40.41526057936537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42289ff511827b%3A0x9e6c2716b524a3ae!2sParque%20de%20El%20Retiro!5e0!3m2!1ses!2ses!4v1633859277497!5m2!1ses!2ses"
                     width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </article>
             <article>
-                <a name="gradiente"></a>
+                <a name="gradiente" class="gradiente"></a>
                 <h2>Gradiente</h2>
                 <div class="gradiente"></div>
             </article>
             <article>
-                <a name="youtube"></a>
+                <a name="youtube" class="youtube"></a>
                 <h2>Video YouTube</h2>
                 <iframe width="100%" height="350" src="https://www.youtube.com/embed/2TQePBCrq8A"
                     title="YouTube video player" frameborder="0"
@@ -119,7 +120,7 @@
                     Estilo</a> <span class="pdf"></span>
             </article>
             <article>
-                <a name="codepen"></a>
+                <a name="codepen" class="codepen"></a>
                 <h2>CodePen</h2>
                 <p class="codepen" data-height="450" data-default-tab="html,result" data-slug-hash="YzzNGeR"
                     data-preview="true" data-user="JavaScriptJunkie"
