--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Esta es la página de contacto de la web Alex Construction, en el caso de que necesite ayuda y tenga alguna duda relevante con cualquiera de nuestros servicios, contáctenos.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Alex Construction | Contacto</title>
@@ -80,6 +81,8 @@
         </div>
     </footer>
 
+
+    <script src="./assets/js/jQuery.js"></script>
 </body>
 
 </html>
