--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Página principal de la web Alex Construction sobre construcción y montajes de pladur. En esta página encontrarás información sobre lo que hacemos y como contactar con nosotros.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Alex Construction | Inicio</title>
 </head>
@@ -97,6 +98,8 @@
         </div>
     </footer>
 
+
+    <script src="./assets/js/jQuery.js"></script>
 </body>
 
 </html>
