--- a/proyectos.html
+++ b/proyectos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aquí se pueden ver algunas de las fotos que les hemos hecho algunos de nuestros proyectos, también podrás ver una pequeña descripción del trabajo realizado en la obra.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Le he cambiado el nombre porque cuadra mejor con mi proyecto -->
     <title>Alex Construction | Proyectos</title> 
@@ -98,6 +99,8 @@
         </div>
     </footer>
 
+
+    <script src="./assets/js/jQuery.js"></script>
 </body>
 
 </html>
